Finalize swagger documentation
